<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Ngee Ann Food Service</string>
    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="action_checkout">Checkout</string>
    <string name="action_viewmap">View On Map</string>
    <string name="btn_main">RESERVE YOUR SHIT!</string>
    <string name="btn_cart">View Cart</string>
    <string name="btn_receipt">View Reserved Items</string>
    <string name="title_activity_select_canteen">Select your Canteen</string>
    <string name="lbl_select_Canteen">Select your Canteen</string>
    <string name="title_activity_list_stalls">Stall</string>
    <string name="lvStallName">Stall Name</string>
    <string name="lvStallItemName">Stall Item Name</string>
    <string name="lvStallItemPrice">$0.00</string>
    <string name="lvStallCount">0</string>
    <string name="title_activity_view_on_maps">View On Map</string>
    <string name="map_key_debug">AIzaSyDnIAjDITteFIvqTrf0amORlWWe3JkAhX8</string>
    <string name="map_key_release">AIzaSyCjFn633-clYVAY1zvLM4aT4fOWGT42k8w</string>
    <string name="title_activity_list_item_in_stall">Stall Items</string>
    <string name="title_activity_cart">View Cart</string>
    <string name="action_checkout_cart">CHECKOUT</string>
    <string name="title_activity_reserved_items">Reserved Items History</string>
    <string name="title_activity_reserved_item_detail">List #</string>
    <string name="title_activity_notify_vendor">Notify Vendor of order</string>
    <string name="list_vendor_notify">Select Item to send a notification to vendors</string>
    <string name="list_order_notify">Select Item to send a notification to person ordering</string>
    <string name="title_activity_notify_vendor_intent">NotifyVendorIntent</string>
    <string name="title_activity_notify_user">Notify User of order completed</string>
    <string name="title_activity_notify_user_intent">NotifyUserIntent</string>
    <string name="link_updates">http://bit.ly/NPFoodService</string>
    <string name="title_activity_demo_settings">Demo Settings</string>
    <string name="yt_install">vnd.youtube:MZeVw_JXD2M</string>
    <string name="yt_update">vnd.youtube:SrIQtNos948</string>
    <string name="yt_order">vnd.youtube:tOLorS9NYn8</string>
    <string name="yt_modify">vnd.youtube:Kxx3myh_ujk</string>
    <string name="yt_confirm">vnd.youtube:9PzXAXS3A48</string>
    <string name="yt_notify">vnd.youtube:Yb65aNnLj1Y</string>
    <string name="yt_location">vnd.youtube:8aeqeQ3RXr8</string>

</resources>
