<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context="com.itachi1706.ngeeannfoodservice.ListStalls" >
    <item android:id="@+id/action_settings"
        android:title="@string/action_settings"
        android:orderInCategory="100"
        app:showAsAction="never" />
    <item android:id="@+id/action_checkout"
        android:title="@string/action_checkout"
        android:icon="@drawable/ic_checkout"
        android:orderInCategory="100"
        app:showAsAction="ifRoom" />
    <item android:id="@+id/action_viewmap"
        android:title="@string/action_viewmap"
        android:icon="@android:drawable/ic_menu_mapmode"
        android:orderInCategory="100"
        app:showAsAction="ifRoom" />
</menu>
