<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.itachi1706.ngeeannfoodservice.MainScreen" >

    <Button
        android:id="@+id/btnReserve"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="129dp"
        android:text="@string/btn_main" />

    <Button
        android:id="@+id/btnCart"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/btn_cart"
        android:layout_below="@+id/btnReserve"
        android:layout_centerHorizontal="true" />

    <Button
        android:id="@+id/btnReceipts"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/btn_receipt"
        android:layout_below="@+id/btnCart"
        android:layout_alignLeft="@+id/btnReserve"
        android:layout_alignStart="@+id/btnReserve" />

</RelativeLayout>
